--- a/Home.html
+++ b/Home.html
@@ -14,14 +14,19 @@
 </header>
 <body>
 <section class="alinhando-navbar">
-    <img class="logo-principal" src="Água Azul.png" alt="Logo Água Azul" width="270px">
+    <img class="logo-principal" src="Água Azul.png" alt="Logo Água Azul" width="70px">
+    <div class="barra-pesquisa" >
+        <input type="text" placeholder="O que você procura?">
+    </div>
+    </section>
     <nav class="navbar">
+        
         <ul>
-            <li><a href=""> Home </a></li>
-            <li><a href="">Empresa</a></li>
-            <li><a href="">Produtos</a></li>
+            <li><a href=""> Início </a></li>
+            <li><a href="">Pedidos</a></li>
             <li><a href="">Localização</a></li>
             <li><a href="">Contatos</a></li>
+            <li><a href=""> Carrinho </a></li>
         </ul>
     </nav>
 </section>
